<resources>
    <string name="app_name">Parent Teacher Portal</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="new_user">New User</string>
    <string name="mainlogo">MainLogo</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_no">Phone No.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_demo">Sign in</string>
    <string name="required_fields">* Required fields</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="home">Home</string>
    <string name="profile">My Profile</string>

    <string name="logout">logout</string>
    <string name="share">Share</string>
    <string name="date">Date</string>
    <string name="attendance">Attendance</string>
    <string name="teachers">Teacher Details</string>
    <string name="id">ID</string>
    <string name="name">NAME</string>
    <string name="subject">SUBJECT</string>
    <string name="logo">Logo</string>
    <string name="images">images</string>
    <string name="address">Address</string>
    <string name="edit">Edit</string>
    <string name="view">View</string>
    <string name="ok">OK</string>
    <string name="forgot">Forgot Password</string>
    <string name="notice">Notice</string>
    <string name="help">Help</string>
    <string name="attennotmarked">Today\'s Attendance Hasn\'t been marked yet.</string>
    <string name="attenmarked">Today\'s Attendance</string>
    <string name="enter_email">Enter email</string>
    <string name="submit">Submit</string>
    <string name="x">X</string>
    <string name="em">Email:</string>
    <string name="contact">Contact:</string>
    <string name="na">Name:</string>
    <string name="no_notice">There are no new Notices to display</string>
</resources>
