<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:backgroundTint="@color/colorPrimaryDark"
    android:orientation="vertical">

    <TextView
        android:id="@+id/x"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:layout_marginTop="8dp"
        android:background="@drawable/circlebackground"
        android:gravity="center"
        android:text="@string/x"
        android:textColor="@color/blue"
        android:textStyle="bold" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/first_name"
        android:textAppearance="@style/Base.TextAppearance.AppCompat"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/par_namee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textSize="16sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/phone_no"
        android:textAppearance="@style/Base.TextAppearance.AppCompat"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/par_phonee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textSize="16sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/address"
        android:textAppearance="@style/Base.TextAppearance.AppCompat"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/par_addresse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/email"
        android:textAppearance="@style/Base.TextAppearance.AppCompat"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/par_emaile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textSize="16sp" />


    <Button
        android:id="@+id/btnedite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:text="@string/ok" />


</LinearLayout>
